1999-10-22  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* docs/user-ref.texi: New file.
	* docs/Makefile.am (UNFINISHED_MANUALS): Added user-red.texi.
	
1999-10-21  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	Add BIOS drive remapping support for chain-loading some foolish
	operating systems.
	
	* stage2/builtins.c (bios_drive_map): New variable.
	(boot_func): If KERNEL_TYPE is KERNEL_TYPE_CHAINLOADER, check
	if BIOS_DRIVE_MAP contains meaningful values. If so, search for
	SAVED_DRIVE in BIOS_DRIVE_MAP and exchange SAVED_DRIVE with the
	mapped drive if found. And then call set_int13_handler.
	(map_func): New function.
	(builtin_map): New variable.
	(builtin_table): Added a pointer to BUILTIN_MAP.
	* stage2/asm.S (ABS): New macro.
	[!STAGE1_5] (set_int13_handler): New function.
	[!STAGE1_5] (int13_handler): New interrupt handler for the real
	mode.
	[!STAGE1_5] (drive_map): New variable.
	[!STAGE1_5] (int13_handler_end): New label used for just
	computing the end address of int13_handler.
	* stage2/shared.h (DRIVE_MAP_SIZE): New macro.
	(set_int13_handler): Declared.
	* grub/asmstub.c (set_int13_handler): New function. Do nothing.
	
1999-10-20  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/builtins.c (find_func): Print only the device names.
	* docs/tutorial.texi: New file.
	* docs/Makefile.am (UNFINISHED_MANUALS): Added tutorial.texi.
	(%.c.texi): Use $(SHELL) instead of /bin/sh.
	(%.h.texi): Likewise.
	(%.S.texi): Likewise.
	
1999-10-20  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/char_io.c (memcheck): Fix the checks: "<=" -> "<".
	Reported by Mike Hicks <hick0088@umn.edu>.
	
1999-10-19  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/builtins.c (find_func): New function.
	(builtin_find): New variable.
	(hide_func): Save SAVED_DRIVE and SAVED_PARTITION to TMP_DRIVE
	and TMP_PARTITION, respectively, and resotre them before return.
	(unhide_func): Likewise.
	(setup_func): Likewise. And set SAVED_DRIVE and SAVED_PARTITION